# fzc

./: CMakeLists.txt  FolderSizeCalculator.swift  LICENSE  README.md  build.sh  copyTest.swift  fastCopy.swift  folder_size_calculator.cpp  folder_size_calculator.hpp  fzc.cpp  fzc.hpp  fzc2.cpp  main.cpp  swift-example.swift  test_calculator.cpp  udu_main.cpp
examples/swift/FZC/Sources/FZC/: FZC.swift
